# voice-schedule-analyst

./: .dockerignore  .env.example  .envrc  .gcloudignore  .gitignore  Dockerfile  README.md  architecture.html  demo-script.html  main.py  pyproject.toml  requirements.txt  requirements.yaml  server.py  thumbnail.html
brain/: schedule-analysis-rules.md
docs/: architecture.md  cloud-run-deployment-proof.txt  devpost-description.md  linkedin-post.md  project-banner.html
schedule_analyst/: __init__.py  __main__.py  agent.py  auth.py  calendar_tools.py  live_agent.py  requirements.txt  server.py
schedule_analyst/static/: index.html
scripts/: deploy.sh  docker-build.sh
static/: index.html
tests/: assertion-test-plan.md  test_calendar_tools.py  test_live_agent.py
